<resources>
    <string name="app_name">As Gaeilge</string>
    <string name="hello">Hello = Dia Dhuit</string>
    <string name="how_are_you">How are you? = Conas atá tú?</string>
    <string name="goodbye">Goodbye = Slán</string>
    <string name="you_are_welcome">You are Welcome = Tá fáilte romhat</string>
    <string name="thank_you">Thank you = Go raibh maith agat</string>
    <string name="good_morning">Good morning = Maidin Mhaith</string>
    <string name="i_am_sorry">I am sorry = Tá brón orm</string>
    <string name="i_am">I am .. = Is mise ..</string>
    <string name="phrases">Phrases</string>
    <string name="colors">Colors</string>
    <string name="animals">Animals</string>
    <string name="bird">Bird = Éan</string>
    <string name="elephant">Elephant = Eilifint</string>
    <string name="horse">Horse = Capall</string>
    <string name="duck">Duck = Lacha</string>
    <string name="mouse">Mouse = Luch</string>
    <string name="bear">Bear = Béar</string>
    <string name="deer">Deer = Fia</string>
    <string name="dog">Dog = Madra</string>
    <string name="cat">Cat = Cat</string>
    <string name="rabbit">Rabbit = Coinín</string>
    <string name="fox">Fox = Sionnach</string>
    <string name="months">Months</string>
    <string name="please">Please = Le do thoil</string>
    <string name="questions">Questions</string>
    <string name="eat">What does he eat? = Céard a itheann sé?</string>
    <string name="whereThey">Where are they? = Cá bhfuil siad?</string>
    <string name="howMany">How many do you have? = Cé mhéad atá agat?</string>
    <string name="why">Why? = Cén fáth?</string>
    <string name="living">Where is she living? = Cá bhfuil sí ina cónaí?</string>
    <string name="whereShe">Where is she? = Cá bhfuil sí?</string>
    <string name="time">What time? = Cén uair?</string>
    <string name="question">What is the question? = Cad é an cheist?</string>
    <string name="where">Where? = Cá háit?</string>
    <string name="food">Food</string>
    <string name="apple">Apple = Úll</string>
    <string name="beef">Beef = Mairteoil</string>
    <string name="chicken">Chicken = Sicín</string>
    <string name="fruit">Fruit = Torthaí</string>
    <string name="fish">Fish = Iasc</string>
    <string name="tomato">Tomato = Tráta</string>
    <string name="pork">Pork = Muiceoil</string>
    <string name="meat">Meat = Feoil</string>
    <string name="steak">Steak = Stéig</string>
    <string name="broccoli">Broccoli = Brocailí</string>
    <string name="bacon">Bacon = Bágún</string>
    <string name="soup">Soup = Anraith</string>
    <string name="red">Red = Dearg</string>
    <string name="green">Green = Glas</string>
    <string name="blue">Blue = Gorm</string>
    <string name="white">White = Bán</string>
    <string name="brown">Brown = Donn</string>
    <string name="black">Black = Dubh</string>
    <string name="gray">Gray = Laith</string>
    <string name="pink">Pink = Bándearg</string>
    <string name="yellow">Yellow = Buí</string>
    <string name="orange">Orange = Oráiste</string>
    <string name="animhi">Animals/Animhi</string>
    <string name="dathanna">Colors/Dathanna</string>
    <string name="bia">Food/Bia</string>
    <string name="míonna">Months/Míonna</string>
    <string name="frásaí">Phrases/Frásaí</string>
    <string name="ceistanna">Questions/Ceistanna</string>
</resources>